<resources>
    <string name="app_name">Officer Rainbow</string>
    <string name="what_is_your_first_name">What is your first name?</string>
    <string name="what_is_your_last_name">What is your last name?</string>
    <string name="abby">Abby</string>
    <string name="sconder">Sconder</string>
    <string name="probation_colors">List your probation colors/test group names:</string>
    <string name="probation_contact">Probation Office contact info:</string>
    <string name="notification_message">What shall the notification message be?</string>
    <string name="notification_exampe">You need to report today!</string>
    <string name="email_address">Email reminder list:</string>
    <string name="sms_address">Text reminder list:</string>
    <string name="color_website">Choose your website(s):</string>
    <string name="phone_alarm">Set off your phone alarm if you need to report?</string>
    <string name="phone_alarm_enabled">Alarm Enabled</string>
    <string name="phone_alarm_disabled">Alarm Disabled</string>
    <string name="probation_reminder">Next probation meeting:</string>
    <string name="next">Save</string>
    <string name="contact_button">Browse Contacts</string>
    <string name="example_color">Blue</string>
    <string name="checking_network">Network Status:</string>
    <string name="test_button">Test Connection</string>
    <string name="onsite_button">Onsite Testing</string>
    <string name="jams_button">JAMS Enterprises</string>
    <string name="nova_button">Nova Testing</string>
    <string name="bgreen_button">Bowling Green Testing</string>
    <string name="jams_toggle">jams</string>
    <string name="nova_toggle">nova</string>
    <string name="onsite_toggle">onsite</string>
    <string name="bgreen_toggle">bgreen</string>
    <string name="jams_enterprises">JAMS Enterprises</string>
    <string name="nova_testing">Nova Testing</string>
    <string name="onsite_testing">Onsite Testing</string>
    <string name="date_text">01/01/1970</string>
    <string name="pick_date">Choose Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="date_field">No date selected yet</string>
    <string name="data_text">No data pulled yet</string>
    <string name="btn_start"> Start </string>
    <string name="btn_stop"> Stop </string>
    <string name="start_text">Start Alarm</string>
    <string name="cancel_text">Cancel Alarm</string>
    <string name="notify_alert">Officer Rainbow Notification</string>
    <string name="notify_found">You need to drop today!!</string>
    <string name="notify_unfound">You do not need to drop today!!</string>
    <string name="connection_error">Connection error.</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_all">Cancel All</string>
    <string name="count_down_date">Count Down Date</string>
    <string name="raw_countown_date">Raw Countdown Date</string>
    <string name="probation_office_contact">Probation Office Contact</string>
    <string name="probation_officer_name">Name</string>
    <string name="probation_phone_number">Phone Number</string>
    <string name="probation_note">Notes</string>
    <string name="prob_end_date_text">Probation End Date</string>
    <string name="your_color_choices">Tap here to add</string>
    <string name="your_color_choices_prompt">Color Choices</string>
    <string name="alarm_prompt">Notification Alarm</string>
    <string name="alarm_state">Tap here to choose</string>
    <string name="tap_choose">Tap here to choose</string>
    <string name="alarm_enabled_text">Alarm Enabled</string>
    <string name="alarm_disabled_text">Alarm Disabled</string>
    <string name="email_enabled">Email Enabled</string>
    <string name="email_disabled">Email Disabled</string>
    <string name="text_msg_enabled">Text MSG Enabled</string>
    <string name="text_msg_disabled">Text MSG Disabled</string>
    <string name="alarm_enabled">Alarm Enabled</string>
    <string name="alarm_disabled">Alarm Disabled</string>
    <string name="probation_meeting_date">Probation Meeting Date</string>
    <string name="probation_end_date">Probation End Date</string>
    <string name="probation_meeting_date_heading">Probation Meeting Date</string>
    <string name="testing_alarm">Testing Alarm:</string>
    <string name="sms_enabled_text">Text MSG Enabled</string>
    <string name="sms_disabled_text">Text MSG Disabled</string>
    <string name="email_enabled_text">Email MSG Enabled</string>
    <string name="email_disabled_text">Email MSG Disabled</string>
    <string name="alarm_state_notify">Tap to enable alert</string>
    <string name="alarm_state_sms">Tap to enable text</string>
    <string name="alarm_state_email">Tap to enable email</string>
    <string name="daily_colors_heading">Colors For Today</string>
    <string name="no_data_pulled">Tap to pull daily colors</string>
    <string name="listen_to_the_daily_colors">Listen To The Daily Colors</string>
    <string name="play_recording">Play Recording</string>
    <string name="confidence">Confidence</string>
    <string name="stop_recording">stop_recording</string>
    <string name="blanket_save">UI.java</string>
    <string name="record_receipt_image">Record Receipt Image</string>
    <string name="action_settings">Settings</string>
    <string name="abc_an_amazing_alphabet_book">ABC: An Amazing Alphabet Book!</string>
    <string name="are_you_my_mother">Are You My Mother?</string>
    <string name="where_is_babys_belly_button">Where is Baby\'s Belly Button</string>
    <string name="on_the_night_you_were_born">On The Night You Were Born</string>
    <string name="hand_hand_fingers_thumb">Hand Hand Fingers Thumb</string>
    <string name="the_very_hungry_caterpillar">The Very Hungry Caterpillar</string>
    <string name="the_going_to_bed_book">The Going To-Bed Book</string>
    <string name="oh_baby_go_baby">Oh Baby Go Baby</string>
    <string name="the_tooth_book">The Tooth Book</string>
    <string name="one_fish_two_fish_red_fish_blue_fish">One Fish, Two Fish, Red Fish, Blue Fish</string>
    <string name="dr_seuss">Dr. Seuss</string>
    <string name="karen_katz">Karen Katz</string>
    <string name="nancy_tillman">Nancy Tillman</string>
    <string name="eric_carle">Eric Carle</string>
    <string name="sandra_boynton">Sandra Boynton</string>
    <string name="cover_art">cover art</string>
    <string name="favorite_star">favorite star</string>
    <string name="call_probation_office">Probation Office Contact</string>
    <string name="call_now">Call Now</string>
    <string name="tap_here_to_choose_probation">Tap here to add</string>
    <string name="marquee_contents"> </string>
    <string name="tap_here_to_choose">Tap here to add</string>
    <string name="confirm_notification">Confirm Notification</string>
    <string name="notification_message_heading">Notification Message</string>
    <string name="notification_message_email_sms">Notification Message:</string>
    <string name="contact_name">Contact:</string>
    <string name="empty_string">            </string>
    <string name="text_msg_header">Text</string>
    <string name="email_msg_header">Email</string>
    <string name="contact_name_notify">Contact Name:</string>
    <string name="debug_enabled">Debug Enabled</string>
    <string name="backend_url_sms">http://data.robotagrex.com:8080/sms-text</string>
    <string name="com.officer.rainbow.PREFERENCE_FILE_KEY">thx1138</string>
    <string name="continue_button">Continue</string>
    <string name="clickabove">Click above to confirm</string>
    <string name="onbutton">onbutton</string>
    <string name="subtype_en_us">subtype_en_us</string>
    <string name="color_test_group_choices">Color/Test Group Choices:</string>
    <string name="results_for_today">Results for Today: </string>
    <string name="none_yet">None Yet</string>
    <string name="notification_settings">Notification Settings:</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="session">Session</string>
    <string name="hotline">Hotline</string>
    <string name="site">Site</string>
    <string name="web_url">Web URL</string>
    <string name="state">State</string>
    <string name="url">URL</string>
    <string name="loading_text">Loading daily colors.....</string>
    <string name="loading_text_audio">Loading: Tap anywhere to stop listening.....</string>
    <string name="notification_messages">Notification Messages:</string>
    <string name="text">Text</string>
    <string name="email">Email</string>
    <string name="select_your_test_site">Select Your Test Site:</string>

</resources>
