<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProbationEndAlarmSettings"
    android:background="@color/blanketBackground"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#000000"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/probation_end_date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_field"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="50sp"
        android:layout_below="@+id/buttondate"
        android:layout_alignStart="@+id/buttondate" />

    <Button
        android:id="@+id/buttondate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
        android:text="@string/choose_date"
        android:textSize="20sp"
        android:layout_below="@+id/toggleButton5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/probation_end_date"
        android:id="@+id/textView7"
        android:textSize="50sp"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton5"
            android:textSize="20sp"
            android:checked="false"
            android:textOn="@string/email_enabled"
            android:textOff="@string/email_disabled"
            android:layout_below="@+id/toggleButton6"
            android:layout_alignStart="@+id/buttondate" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton6"
            android:textSize="20sp"
            android:checked="false"
            android:textOn="@string/text_msg_enabled"
            android:textOff="@string/text_msg_disabled"
            android:layout_below="@+id/toggleButton7"
            android:layout_alignStart="@+id/toggleButton5" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton7"
            android:textSize="20sp"
            android:checked="false"
            android:textOn="@string/alarm_enabled"
            android:textOff="@string/alarm_disabled"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/buttonnext"
            android:clickable="false"
            android:textSize="50sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</ScrollView>
