<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.robotagrex.or.officerrainbow.MainActivity"
    android:background="#6b6b6b">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/buttonlast"
        android:clickable="false"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_row="0"
        android:layout_column="3" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#000000"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:text="Toolbar Title"
        android:layout_row="0"
        android:layout_column="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_first_name"
        android:textSize="40sp"
        android:textIsSelectable="false"
        android:textColor="#000000"
        android:id="@+id/textView"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_row="15"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/sconder"
        android:ems="10"
        android:id="@+id/editText2"
        android:textSize="34sp"
        android:selectAllOnFocus="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_row="16"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/abby"
        android:ems="10"
        android:id="@+id/editText"
        android:textSize="34sp"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_row="17"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_last_name"
        android:textSize="40sp"
        android:textIsSelectable="true"
        android:textColor="#000000"
        android:id="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_row="17"
        android:layout_column="4" />

</GridLayout>
