<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OfficerRainbow"
    android:background="@color/blanketBackground"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_first_name"
        android:textSize="40sp"
        android:textIsSelectable="false"
        android:textColor="#000000"
        android:id="@+id/notification_message"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/abby"
        android:ems="10"
        android:id="@+id/email1"
        android:labelFor="@id/email1"
        android:textSize="34sp"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/notification_message"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_last_name"
        android:textSize="40sp"
        android:textIsSelectable="true"
        android:textColor="#000000"
        android:id="@+id/text_message_header"
        android:labelFor="@id/text_message_header"
        android:layout_below="@+id/email1"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/sconder"
        android:ems="10"
        android:id="@+id/sms_contact1"
        android:labelFor="@id/sms_contact1"
        android:textSize="34sp"
        android:selectAllOnFocus="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_message_header"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/buttonlast"
        android:clickable="false"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#000000"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/email1"
        android:layout_alignStart="@+id/email1"/>

</RelativeLayout>

</ScrollView>
